# LocalFinds

./: .env.example  .env.local.example  .gitignore  README.md  VISION.md  docker-compose.yml  package-lock.json  package.json
.playwright-mcp/: page-2026-06-12T21-05-02-238Z.yml  page-2026-06-12T21-05-17-984Z.yml  page-2026-06-12T21-05-36-991Z.yml  page-2026-06-12T21-05-47-216Z.yml  page-2026-06-12T21-26-14-514Z.yml  page-2026-06-12T21-26-22-691Z.yml  page-2026-06-12T21-26-40-908Z.yml  page-2026-06-12T21-31-13-649Z.yml  page-2026-06-12T21-35-21-893Z.yml
db/: .gitignore  README.md  pyproject.toml
db/etl/: README.md  migrate_sqlite_to_pg.py
db/local/: osm-places-local.sql
db/migrations/: 0001_localfinds_schema.sql  0002_osm_places.sql  0003_localfinds_places_view.sql  0004_run_events.sql  0005_custom_places.sql  0006_places_tags_gin.sql  0007_users_auth.sql
db/tests/: conftest.py  test_etl.py  test_localfinds_schema.py  test_osm_places.py  test_places_view.py  test_smoke.py
db/tests/fixtures/: legacy_sqlite_schema.sql  planet_osm.sql  seed_osm.sql
phoenix/: .gitignore  AGENTS.md  README.md  mix.exs
scripts/: backfill-find-hashes.ts  db-tunnel.sh  dedupe-businesses.ts  (+3 more)
services/osm-api/: .gitignore  README.md  docker-compose.yml  pyproject.toml
services/osm-api/sql/: indexes.sql  osm_businesses_view.sql  osm_fixture_schema.sql
services/osm-api/src/osm_api/: __init__.py  auth.py  config.py  db.py  main.py  models.py  queries.py
services/osm-api/tests/: conftest.py  seed.sql  test_auth.py  test_config.py  test_endpoints.py  test_queries.py  test_view.py
(+162 files in other folders)
